--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,8 +2,11 @@ version: '3.0'
 services:
     wc-rpi:
         image: wc-rpi:latest
+        network_mode: "host"
+        privileged: true
         environment:
-         - DISPLAY=unix$DISPLAY
+         - DISPLAY=$DISPLAY
         volumes:
          - /dev/video0:/dev/video0
-         - tmp/.X11-unix:/tmp/.X11-unix
+         - /tmp/.X11-unix:/tmp/.X11-unix
+         - ./:/home/hero/data
