--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 services:
     wc-rpi:
-        image: wc-rpi:1.1.3
+        image: wc-rpi-clean:1.0.0
         privileged: true
         tty: true
         stdin_open: true
@@ -12,7 +12,7 @@ services:
          - QT_X11_NO_MITSHM=1
         volumes:
          # give authority and camera for gui app
-         - /tmp/.X11-unix:/tmp/.X11-unix
+         - /tmp/.X11-unix:/tmp/.X11-unix:rw
          - $HOME/.Xauthority:/home/hero/.Xauthority:rw
          - ./:/home/hero/data
          - /dev/video0:/dev/video0
